# pyannote-audio

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  FAQ.md  GPU_OPTIMIZATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  SOLUTION_COMPLETE.md  environment-babytrain.yml  environment-shennong.yml  environment.yaml  environment.yml  example_optimized_usage.py  hubconf.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  speaker_diarization.py  syntax_verification.py  test_gpu_optimization.py  verify_gpu_optimizations.py
.github/workflows/: cli.yml  create-release.yml  doc.yml  test.yml  test_cli.yml
doc/source/: changelog.rst  index.rst
notebook/: augmentation.ipynb  example.ipynb  freeze.ipynb  inference.ipynb
pyannote/audio/: __init__.py  __main__.py  cli.py  optimizers.py  signal.py
pyannote/audio/applications/: base.py  base_labeling.py  change_detection.py  domain_classification.py  feature_extraction.py  multiclass_babytrain.py  multilabel.py  multilabel_babytrain.py  overlap_detection.py  pyannote_audio.py  speaker_embedding.py  speech_activity_detection.py  speech_detection.py
pyannote/audio/augmentation/: __init__.py  mix.py  no.py  noise.py  registry.py  resampler.py  spec_augment.py  spec_augment_callback.py
pyannote/audio/cli/: evaluate.py  pretrained.py  train.py
pyannote/audio/core/: calibration.py  callback.py  data.py  guided_inference.py  hf_hub.py  inference.py  io.py  model.py  pipeline.py  streaming_inference.py  task.py
pyannote/audio/data/: amimixedheadset.py  data.py  debug.py  musan.py  util.py  validate.py  vox.py
pyannote/audio/embedding/: __init__.py  base.py  callbacks.py  extraction.py  generators.py  glue.py  models.py  smorms3.py
pyannote/audio/features/: __init__.py  base.py  mapper.py  precomputed.py  pretrained.py  spec_augmentor.py  utils.py  with_librosa.py  with_shennong.py  with_yaafe.py  wrapper.py
pyannote/audio/generators/: change.py  labels.py  speech.py
pyannote/audio/interactive/: answers2file.py  correctionControler.js  diffController.js  errorControler.js  pipeline.py  recipe.py  template.css  utils.py  v02.py  v03.py  voice_activity_detection.py  wavesurferController.js
pyannote/audio/labeling/: __init__.py  base.py  extraction.py  models.py
scripts/: chang_detection_with_lstm.py  speaker_embedding.py  speech_activity_detection.py
temp/: pytorch20.py
tests/: augmentation_tests.py  inference_test.py  io_test.py  io_tests.py  test_budget.py  test_cli.py  test_clustering.py  test_clustering_gpu.py  test_gpu_linkage.py  test_io.py  test_pipeline_subfolder.py  test_sad.sh  test_speechbrain.py  test_stats_pool.py  test_train.py  test_vectorization_phase35.py  tests_augmentation.py
tests/data/: database.yml  simple_model_on_speaker_diarization_task.ckpt
tests/tasks/: test_reproducibility.py
tests/utils/: test_balance.py  test_getter.py  test_monolabel_seg.py  test_powerset.py  test_powerset_seg.py  test_stats_pool.py
tutorials/: MRE_template.ipynb  Notebook_test.ipynb  adapting_pretrained_pipeline.ipynb  add_your_own_model.ipynb  add_your_own_task.ipynb  applying_a_model.ipynb  applying_a_pipeline.ipynb  eval_separation_pipeline copy.ipynb  eval_separation_pipeline.ipynb  eval_seriously_pipeline.ipynb  fine_tuning.ipynb  intro.ipynb  multilabel_detection.ipynb  overlapped_speech_detection.ipynb  prodigy.md  training_a_model.ipynb  training_with_cli.md  use_local_files_for_diarization.sh  voice_activity_detection.ipynb  voice_type_classification.ipynb
tutorials/change-detection/: README.md  config.yml
tutorials/community/: eval_separation_pipeline.ipynb  offline_usage_speaker_diarization.ipynb
tutorials/feature_shennong/: config.yml  metadata.yml
tutorials/pretrained/: README.md
tutorials/shennong_bottleneckPitch/: config.yml  metadata.yml
tutorials/shennong_fbankPitch/: config.yml  metadata.yml
tutorials/shennong_mfccPitch/: config.yml  metadata.yml
tutorials/shennong_spectrogram/: config.yml
(+310 files in other folders)
