[project]
name = "pyannote-audio"
description = "State-of-the-art speaker diarization toolkit"
readme = "README.md"
authors = [
    { name = "Hervé BREDIN", email = "herve@pyannote.ai" }
]
requires-python = ">=3.10"

dynamic = [
  "version",
]

dependencies = [
    "asteroid-filterbanks>=0.4.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.28.1",
    "lightning>=2.5.0.post0",
    "pyannote-core>=5.0.0",
    "pyannote-database>=5.1.3",
    "pyannote-metrics>=3.2.1",
    "pyannote-pipeline>=3.0.1",
    "pytorch-metric-learning>=2.8.1",
    "rich>=13.9.4",
    "safetensors>=0.5.2",
    "torch-audiomentations>=0.12.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchmetrics>=1.6.1",
    "soundfile>=0.13.1",
]

[project.scripts]
pyannote-audio = "pyannote.audio.__main__:app"


[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
]
doc = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
]
cli = [
    "typer>=0.15.1",
]
separation = [
    "asteroid>=0.5.2",
    "transformers>=4.48.3",
]
dev = [
    "ipython>=8.32.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyannote"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
