[project]
name = "pyannote-audio"
description = "State-of-the-art speaker diarization toolkit"
readme = "README.md"
authors = [{ name = "Hervé BREDIN", email = "herve@pyannote.ai" }]

dynamic = ["version"]

dependencies = [
    "asteroid-filterbanks",
    "einops",
    "huggingface-hub",
    "lightning",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "pyannote-core",
    "pyannote-database",
    "pyannote-metrics",
    "pyannote-pipeline",
    "pytorch-metric-learning",
    "rich",
    "safetensors",
    "torch-audiomentations",
    "torch",
    "torchaudio",
    "torchcodec",
    "torchmetrics",
    "matplotlib",
    "pyannoteai-sdk",
]

[project.scripts]
pyannote-audio = "pyannote.audio.__main__:app"

[project.optional-dependencies]
test = ["papermill", "pytest"]
doc = ["sphinx-rtd-theme", "sphinx"]
cli = ["typer"]
separation = ["asteroid", "transformers"]
dev = ["ipython"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyannote"]

[dependency-groups]
dev = ["ipykernel"]
